add_library(trees_kmeans_tree SHARED 
kmeans_tree.cc 
kmeans_tree_node.cc 
training_options.cc 
kmeans_tree.h 
kmeans_tree_node.h 
training_options.h )

set(SOURCES
cc_proto
data_format_datapoint
data_format_dataset
distance_measures_distance_measure_base
distance_measures_one_to_many
distance_measures_one_to_one_l2_distance
oss_wrappers_scann_aligned_malloc
oss_wrappers_scann_castops
oss_wrappers_scann_down_cast
oss_wrappers_scann_random
oss_wrappers_scann_threadpool
oss_wrappers_tf_dependency
utils_datapoint_utils
utils_fast_top_neighbors
utils_gmm_utils
utils_parallel_for
utils_scalar_quantization_helpers
utils_types
utils_util_functions
utils_zip_sort

absl::base
absl::flat_hash_set
absl::flags
absl::random_random
)

target_link_libraries(trees_kmeans_tree PUBLIC ${SOURCES})